--- a/maybe_finance/Dockerfile
+++ b/maybe_finance/Dockerfile
@@ -5,11 +5,11 @@ USER root
 
 # Install PostgreSQL and sudo with proper cleanup
 RUN apt-get update && \
-    apt-get install -y postgresql postgresql-contrib sudo && \
+    apt-get install -y postgresql postgresql-contrib sudo libpq-dev && \
     rm -rf /var/lib/apt/lists/*
 
 # Configure sudo for rails user
-RUN echo "rails ALL=(postgres) NOPASSWD:ALL" >> /etc/sudoers.d/rails-postgres && \
+RUN echo "rails ALL=(postgres) NOPASSWD:ALL" > /etc/sudoers.d/rails-postgres && \
     chmod 0440 /etc/sudoers.d/rails-postgres
 
 # Copy our run script
