--- a/maybe_finance/config.yaml
+++ b/maybe_finance/config.yaml
@@ -1,6 +1,6 @@
 name: "Maybe Finance"
 description: "Maybe Finance is a personal finance management application that helps you track your expenses, income, and investments."
-version: "1.0.5"
+version: "1.0.7"
 slug: "maybe_finance"
 init: false
 arch:
@@ -20,11 +20,14 @@ schema:
   postgres_password: str
   postgres_db: str
 ports:
-  3000/tcp: 3000
+  3000/tcp: 3001
 environment:
   POSTGRES_USER: "{options.postgres_user}"
   POSTGRES_PASSWORD: "{options.postgres_password}"
   POSTGRES_DB: "{options.postgres_db}"
+  POSTGRES_HOST: "localhost"
+#map:
+#  - type: data # This maps the /data directory for persistent storage
+#    read_only: False
 map:
-  # Persist PostgreSQL data directory
-  /data: persistent
+  - "data:rw"
