--- a/maybe_finance/config.yaml
+++ b/maybe_finance/config.yaml
@@ -14,18 +14,14 @@ ports:
   3001/tcp: 3001
 map:
   - "data:rw"
+schema:
+  postgres_password: str
+  secret_key_base: str
+options:
+  postgres_password: "homeassistant"
+  secret_key_base: "generate_a_secure_key_here"
 build:
   dockerfile: Dockerfile
   args:
     BUILD_ARCH: "{arch}"
-version: 0.3.0
-# Environment variables set here are passed to the container at runtime
-environment:
-  DB_HOST: "172.30.32.1"
-  DB_PORT: "5432"
-  POSTGRES_USER: postgres
-  POSTGRES_PASSWORD: homeassistant
-  SECRET_KEY_BASE: "generate_a_secure_key_here"
-  SELF_HOSTED: "true"
-  DISABLE_SSL: "false"
-  HOSTING_PLATFORM: "localhost"
+version: 0.3.1
