fix: DB Creation

--- a/maybe_finance/Dockerfile
+++ b/maybe_finance/Dockerfile
@@ -68,3 +68,4 @@ ENTRYPOINT ["/usr/local/bin/run.sh"]
 
 # Start the server by default, this can be overwritten at runtime
 EXPOSE 3000
+CMD ["./bin/rails", "server"]
