--- a/maybe_finance/Dockerfile
+++ b/maybe_finance/Dockerfile
@@ -4,7 +4,7 @@ FROM --platform=${BUILD_ARCH} alpine/git AS clone
 WORKDIR /src
 RUN apk add --no-cache git && \
     git clone https://github.com/maybe-finance/maybe.git . && \
-    git checkout tags/v0.3.0
+    git checkout main
 
 # Stage 2: Base image with necessary dependencies
 ARG BUILD_ARCH
