--- a/maybe_finance/config.yaml
+++ b/maybe_finance/config.yaml
@@ -20,7 +20,7 @@ schema:
   db_host: str?
   db_port: str?
   postgres_user: str?
-  app_domain: str
+#  app_domain: str
   plaid_client_id: str?
   plaid_secret: str?
   plaid_env: str?
@@ -30,9 +30,9 @@ options:
   db_host: "172.30.32.1"
   db_port: "5432"
   postgres_user: "postgres"
-  app_domain: "http://localhost"
+#  app_domain: "http://localhost"
 build:
   dockerfile: Dockerfile
   args:
     BUILD_ARCH: "{arch}"
-version: 0.3.1
+version: 0.3.2
