--- a/maybe_finance/config.yaml
+++ b/maybe_finance/config.yaml
@@ -22,19 +22,27 @@ schema:
   db_host: str?
   db_port: str?
   postgres_user: str?
-#  app_domain: str
+  #app_domain: str
   plaid_client_id: str?
   plaid_secret: str?
   plaid_env: str?
+  self_hosted: bool
+  rails_force_ssl: bool
+  rails_assume_ssl: bool
+  good_job_execution_mode: str
 options:
   postgres_password: "homeassistant"
   secret_key_base: "generate_a_secure_key_here"
   db_host: "172.30.32.1"
   db_port: "5432"
   postgres_user: "postgres"
-#  app_domain: "http://localhost"
+  #  app_domain: "http://localhost"
+  self_hosted: true
+  rails_force_ssl: false
+  rails_assume_ssl: false
+  good_job_execution_mode: "async"
 build:
   dockerfile: Dockerfile
   args:
     BUILD_ARCH: "{arch}"
-version: 0.3.2
+version: 0.3.3
