--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -14,12 +14,16 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.MAYBE_HASS_RELEASE }}
+        #  username: ${{ secrets.DOCKERHUB_USERNAME }}
+        #  password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Publish
         uses: home-assistant/builder@master
         with:
           args: |
             --all \
             --target maybe_finance \
-            --docker-hub m123ist
+            --docker-hub "ghcr.io/${{ github.repository_owner }}" \
+#            --docker-hub m123ist
