--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,5 +15,6 @@ jobs:
           args: |
             --test \
             --all \
-            --target addon-folder \
-            --docker-hub m123ist
+            --target maybe_finance \
+            --docker-hub "ghcr.io/${{ github.repository_owner }}" \
+#            --docker-hub m123ist
