--- a/.github/workflows/auto-update.yaml
+++ b/.github/workflows/auto-update.yaml
@@ -53,10 +53,16 @@ jobs:
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
           BRANCH_NAME="update-maybe-$NEW_VERSION"
-          git checkout -B "$BRANCH_NAME"
+          git fetch origin "$BRANCH_NAME" || true
+          if git show-ref --verify --quiet refs/remotes/origin/$BRANCH_NAME; then
+            git checkout "$BRANCH_NAME"
+            git pull origin "$BRANCH_NAME"
+          else
+            git checkout -b "$BRANCH_NAME"
+          fi
           git add maybe_finance/Dockerfile maybe_finance/config.yaml
-          git commit -m "Update Maybe Finance to $LATEST_COMMIT and bump version to $NEW_VERSION"
-          git push -f origin "$BRANCH_NAME"
+          git commit -m "Update Maybe Finance to $LATEST_COMMIT and bump version to $NEW_VERSION" || echo "No changes to commit"
+          git push origin "$BRANCH_NAME"
           echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_ENV
 
       - name: Create or update Pull Request
@@ -65,6 +71,9 @@ jobs:
         with:
           token: ${{ secrets.MAYBE_HASS_RELEASE }}
           branch: ${{ env.BRANCH_NAME }}
-          title: "chore: Update Maybe Finance to latest commit"
+          title: "Update Maybe Finance to latest commit"
           body: "This PR updates the Maybe Finance repository to the latest commit ($LATEST_COMMIT) and bumps the patch version to $NEW_VERSION."
           labels: "automated update"
+          delete-branch: false
+          draft: false
+          update-existing: true
