--- a/.github/workflows/auto-update.yaml
+++ b/.github/workflows/auto-update.yaml
@@ -42,23 +42,26 @@ jobs:
       - name: Bump patch version in config.yaml
         if: env.UPDATE_NEEDED == 'true'
         run: |
-          VERSION=$(grep -oP '(?<=version: )\d+\.\d+\.\d+' maybe_finance/config.yaml)
-          NEW_VERSION=$(echo $VERSION | awk -F. '{$NF+=1; print $1"."$2"."$3}')
-          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
-          sed -i "s/$VERSION/$NEW_VERSION/" maybe_finance/config.yaml
+            VERSION=$(grep -oP '(?<=version: )\d+\.\d+\.\d+' maybe_finance/config.yaml)
+            IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
+            PATCH=$((PATCH + 1))
+            NEW_VERSION="$MAJOR.$MINOR.$PATCH"
+            echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
+            sed -i "s/$VERSION/$NEW_VERSION/" maybe_finance/config.yaml
 
-          - name: Create or update Pull Request
-          if: env.UPDATE_NEEDED == 'true'
-          uses: peter-evans/create-pull-request@v5
-          with:
-            token: ${{ secrets.MAYBE_HASS_RELEASE }}
-            base: main
-            branch: update-maybe-${{ env.NEW_VERSION }}
-            title: "Update Maybe Finance to latest commit"
-            body: |
-              This PR updates the Maybe Finance repository to the latest commit ($LATEST_COMMIT) 
-              and bumps the patch version to **${{ env.NEW_VERSION }}**.
-            labels: "automated update"
-            delete-branch: true
-            draft: false
-  
+
+      - name: Create or update Pull Request
+        if: env.UPDATE_NEEDED == 'true'
+        uses: peter-evans/create-pull-request@v5
+        with:
+         token: ${{ secrets.MAYBE_HASS_RELEASE }}
+         base: main
+         branch: update-maybe-${{ env.NEW_VERSION }}
+         title: "Update Maybe Finance to latest commit"
+         body: |
+             This PR updates the Maybe Finance repository to the latest commit ($LATEST_COMMIT) 
+             and bumps the patch version to **${{ env.NEW_VERSION }}**.
+         labels: "automated update"
+         delete-branch: true
+         draft: false
+
