--- a/maybe_finance/config.yaml
+++ b/maybe_finance/config.yaml
@@ -5,9 +5,11 @@ description: >-
 slug: maybe_finance
 init: false
 arch:
+  - armhf
+  - armv7
   - aarch64
   - amd64
-  - armv7
+  - i386
 startup: application
 boot: auto
 #ingress: true
@@ -43,9 +45,9 @@ options:
   rails_force_ssl: false
   rails_assume_ssl: false
   good_job_execution_mode: "async"
+version: 0.3.3
 #build:
 #  dockerfile: Dockerfile
 #  args:
 #    BUILD_ARCH: "{arch}"
-version: 0.3.3
 image: ghcr.io/m123-dev/{arch}-maybe_finance_homeassistant
