--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -8,22 +8,24 @@ jobs:
   publish:
     name: Publish
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        architecture: [armhf, armv7, amd64, aarch64, i386]
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v3
+
       - name: Login to the Github container registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.MAYBE_HASS_RELEASE }}
-        #  username: ${{ secrets.DOCKERHUB_USERNAME }}
-        #  password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build & Publish
         uses: home-assistant/builder@master
         with:
           args: |
-            --all \
+            --${{ matrix.architecture }} \
             --target maybe_finance \
-            --docker-hub "ghcr.io/${{ github.repository_owner }}" \
-#            --docker-hub m123ist
+            --docker-hub "ghcr.io/${{ github.repository_owner }}"
