--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,8 +4,11 @@ on: [pull_request]
 
 jobs:
   build:
-    name: Test build
+    name: Test build (${{ matrix.arch }})
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        arch: [armhf, armv7, amd64, aarch64, i386]
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v3
@@ -14,7 +17,6 @@ jobs:
         with:
           args: |
             --test \
-            --all \
+            --${{ matrix.arch }} \
             --target maybe_finance \
             --docker-hub "ghcr.io/${{ github.repository_owner }}" \
-#            --docker-hub m123ist
