--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,7 @@ jobs:
     name: Test build (${{ matrix.arch }})
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false # Prevents cancellation of remaining jobs if one fails
       matrix:
         arch: [armhf, armv7, amd64, aarch64, i386]
     steps:
