fix: Remove broken arch

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -10,7 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        architecture: [armhf, armv7, amd64, aarch64, i386]
+        architecture: [armhf, amd64, aarch64]
+        #i386
+        #armv7,
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v3
