--- a/maybe_finance/Dockerfile
+++ b/maybe_finance/Dockerfile
@@ -5,7 +5,7 @@ FROM $BUILD_FROM AS clone
 WORKDIR /src
 RUN apk add --no-cache git && \
     git clone https://github.com/maybe-finance/maybe.git . && \
-    git checkout 79e1a2c0ffd5191fe6c040da68a311e1c1e6beb4
+    git checkout e9b29f67268e326a8ed3ec53d07351187cc31fd7
 
 # Stage 2: Base image with necessary dependencies
 FROM --platform=${BUILD_ARCH} ruby:3.4.1-slim AS base
@@ -13,8 +13,9 @@ FROM --platform=${BUILD_ARCH} ruby:3.4.1-slim AS base
 # Install base packages
 RUN apt-get update -qq && \
     apt-get install --no-install-recommends -y \
-    curl libvips postgresql-client jq bash && \
-    rm -rf /var/lib/apt/lists/*
+    curl libvips postgresql-client jq bash
+# && \
+# rm -rf /var/lib/apt/lists/*
 
 # Set production environment
 ENV RAILS_ENV="production" \
@@ -32,40 +33,36 @@ FROM base AS build
 # Install build dependencies
 RUN apt-get update -qq && \
     apt-get install --no-install-recommends -y \
-    build-essential git libpq-dev pkg-config && \
-    rm -rf /var/lib/apt/lists/*
+    curl libvips postgresql-client jq bash build-essential git libpq-dev pkg-config
+
+# && \
+# rm -rf /var/lib/apt/lists/*
 
 # Install gems
-RUN bundle install && \
-    rm -rf ~/.bundle/ "${BUNDLE_PATH}"/ruby/*/cache "${BUNDLE_PATH}"/ruby/*/bundler/gems/*/.git && \
-    bundle exec bootsnap precompile --gemfile
+RUN bundle install
+RUN rm -rf ~/.bundle/ "${BUNDLE_PATH}"/ruby/*/cache "${BUNDLE_PATH}"/ruby/*/bundler/gems/*/.git
+RUN bundle exec bootsnap precompile --gemfile -j 0
+
+COPY . .
 
 # Precompile bootsnap and assets
 #RUN bundle exec bootsnap precompile -j 0 app/ lib/
-RUN bundle exec bootsnap precompile app/ lib/
+RUN bundle exec bootsnap precompile -j 0 app/ lib/
 RUN SECRET_KEY_BASE_DUMMY=1 ./bin/rails assets:precompile
 
 # Final stage
 FROM base
 
-# Create storage directory in mapped volume path
-RUN mkdir -p /data/storage && \
-    ln -s /data/storage /rails/storage && \
-    chmod -R 777 /data
-
-# Clean up
+# Clean up installation packages to reduce image size
 RUN rm -rf /var/lib/apt/lists /var/cache/apt/archives
 
-# Copy built artifacts
-COPY --from=build /usr/local/bundle /usr/local/bundle
+# Copy built artifacts: gems, application
+COPY --from=build "${BUNDLE_PATH}" "${BUNDLE_PATH}"
 COPY --from=build /rails /rails
 
 # Copy startup script
 COPY run.sh /usr/local/bin/run.sh
 RUN chmod +x /usr/local/bin/run.sh
-
-# Set permissions to avoid issues with config file
-RUN mkdir -p /data && chmod -R 777 /data
 
 # Keep running as root (no user switch)
 
